<resources>
    <string name="app_name">Driveway</string>
    <string name="title_activity_owner">OwnerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_the_driver">TheDriverActivity</string>
    <string name="located_at">Located at:</string>
    <string name="my_name">My Name:</string>
    <string name="my_phone_number">My Phone Number:</string>
    <string name="money_symbol">$</string>
    <string name="hr">/Hr</string>
    <string name="_15">15</string>
    <string name="_00_00_am">00:00 AM</string>
    <string name="dash">-</string>
    <string name="_00_00_pm">00:00 PM</string>
    <string name="divide_time_into">Divide time into</string>
    <string name="_60">60</string>
    <string name="minute_intervals">minute intervals</string>
    <string name="create_time">Create Time</string>
    <string name="finish">Finish</string>
    <string name="location">Location</string>
    <string name="_15_hr">$15/hr</string>
    <string name="date">Date</string>
    <string name="owner_name">Owner Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="appointments">Appointments</string>
    <string name="requested_appointments">Requested Appointments</string>
    <string name="time_slots_available">Time slots available</string>
    <string name="driver_name">Driver Name</string>
    <string name="license_plate">License Plate</string>
    <string name="car_model">Car Model</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="email">Email</string>
    <string name="bobjones_gmail_com">bobjones@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_more_than_5_characters">Password more than 5 characters</string>
    <string name="full_name">Full Name</string>
    <string name="bob_jones">Bob Jones</string>
    <string name="_1234567890">1234567890</string>
    <string name="license_plates">License Plates</string>
    <string name="wj5751">WJ5751</string>
    <string name="white_honda_accord">White Honda Accord</string>
    <string name="create_account">Don\'t have an account? Sign Up</string>
    <string name="current_image">Current image:</string>
    <string name="current_location">Current location:</string>
    <string name="_12345_street_ave">12345 Street Ave</string>
    <string name="city">City</string>
    <string name="ca">CA</string>
    <string name="verify_location">Verify location</string>
    <string name="space" />
    <string name="verified_location_shown_here">Verified Location Shown Here</string>
    <string name="current_name">Current name:</string>
    <string name="current_phone_number">Current Phone Number:</string>
    <string name="_123_456_7890">(123)-456-7890</string>
    <string name="_1234653787">1234653787</string>
    <string name="current_car_model">Current Car Model:</string>
    <string name="honda_accord">Honda Accord</string>
    <string name="current_license_plate">Current License Plate:</string>
    <string name="_5jw232">5JW232</string>
    <string name="confirm">Confirm</string>
    <string name="driveway_owner_full_name">Driveway Owner Full Name</string>
    <string name="desired_time">Desired time:</string>
    <string name="request">Request</string>
    <string name="login">Login</string>
    <string name="create_a_username_and_password">Create an account</string>
    <string name="driveway">Driveway</string>
    <string name="are_you_a_driver_or_a_driveway_owner">Are you a driver or a driveway owner?</string>
    <string name="driver">Driver</string>
    <string name="owner">Owner</string>
    <string name="select_an_image_for_your_driveway">Select an image for your driveway</string>
    <string name="street_address">Street Address</string>
    <string name="fresno">Fresno</string>
    <string name="state">State</string>
    <string name="verify_address">Verify Address</string>
    <string name="verified_location_will_be_shown_here">Verified location will be shown here.</string>
    <string name="time">Time</string>
    <string name="full_name_of_driveway_owner">Full name of driveway owner</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="welcome">Welcome!</string>
    <string name="maximum_dollars_per_hour">Maximum dollars($) per hour:</string>
    <string name="_17">17</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="_10am_11am">10am - 11am</string>
    <string name="status_of_driver_requested_approved_active">Status of Driver: requested, approved, active</string>
    <string name="most_expensive">Most Expensive</string>
    <string name="yyyy_mm_dd">YYYY MM DD</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="_00_00_00">00 : 00 : 00</string>
    <string name="driveway_location">Driveway Location</string>
    <string name="client_name">Client Name</string>
    <string name="client_phone_number">Client Phone Number</string>
    <string name="arrive_leave">Arrive - Leave</string>
    <string name="july_31_2019">July 31, 2019</string>
    <string name="_11223_laurel_ave_whittier_ca_90605_usa">11223 Laurel Ave, Whittier CA 90605, USA</string>
    <string name="_2019_10_12">2019 10 12</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="open_gallery">Open Gallery</string>
</resources>
