<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editprofiledriverroot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="pablo.myexample.drivewayfindertwo.EditProfileDriver">

    <TextView
        android:id="@+id/profileDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:padding="8dp"
        android:text="@string/current_name"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/bob_jones"
        android:padding="8dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/profileDisplayPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:padding="8dp"
        android:text="@string/current_phone_number"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/_1234653787"
        android:padding="8dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/profileDisplayCarModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:padding="8dp"
        android:text="@string/current_car_model"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newCarModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/honda_accord"
        android:padding="8dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/profileDisiplayPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:padding="8dp"
        android:text="@string/current_license_plate"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/_5jw232"
        android:padding="8dp"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/buttonshape"
        android:onClick="editProfileDriverConfirm"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>
