<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CalendarView
            android:id="@+id/dialogCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/maximum_dollars_per_hour"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/dialogInput"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edittexforcardviewone"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/_17"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/dialogCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/dialogApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/apply"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>