<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/driverprofileroot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".DriverProfile">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_account_circle_24px"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/dpname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/driver_name"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_android_black_24dp"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/dpphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/phone_number"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call_to_action_24px"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/dpplate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/license_plate"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_directions_car_24px"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/dpmodel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/car_model"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/dpacceptbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/rounded_edittext"
        android:padding="8dp"
        android:text="@string/accept"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dpdenybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/rounded_edittext"
        android:padding="8dp"
        android:text="@string/deny"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</LinearLayout>